<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    tools:ignore="UnusedNavigation"
    app:startDestination="@id/navigation_holiday">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.memori.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_gallery"
        android:name="com.example.memori.ui.gallery.GalleryFragment"
        android:label="@string/title_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/navigation_holiday"
        android:name="com.example.memori.ui.holiday.HolidayFragment"
        android:label="@string/title_holiday"
        tools:layout="@layout/fragment_holiday"/>


    <fragment
        android:id="@+id/navigation_vplace"
        android:name="com.example.memori.ui.vplace.VPlaceFragment"
        android:label="@string/title_vplace"
        tools:layout="@layout/fragment_vplace" />


</navigation>