<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.holiday.holidays.CreateHolidayActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="75dp">

        <TextView
            android:id="@+id/label_createholidays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_createHolidays"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/label_vPlaceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_journeyName"
            app:layout_constraintStart_toStartOf="@+id/label_createholidays"
            app:layout_constraintTop_toBottomOf="@+id/label_createholidays" />

        <TextView
            android:id="@+id/label_Companions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_companions"
            app:layout_constraintStart_toStartOf="@+id/edit_EndDate"
            app:layout_constraintTop_toBottomOf="@+id/edit_EndDate" />

        <TextView
            android:id="@+id/label_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_notes"
            app:layout_constraintStart_toStartOf="@+id/edit_vPlaceCompanions"
            app:layout_constraintTop_toBottomOf="@+id/edit_vPlaceCompanions" />

        <TextView
            android:id="@+id/label_vPlaceDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_startdate"
            app:layout_constraintStart_toStartOf="@+id/label_createholidays"
            app:layout_constraintTop_toBottomOf="@+id/edit_vPlaceName" />

        <TextView
            android:id="@+id/label_startDate2"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginTop="8dp"
            android:text="@string/lbl_enddate"
            app:layout_constraintStart_toStartOf="@+id/edit_StartDate"
            app:layout_constraintTop_toBottomOf="@+id/edit_StartDate" />

        <TextView
            android:id="@+id/label_images"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginTop="16dp"
            android:text="Would you like to add any images?"
            app:layout_constraintStart_toStartOf="@+id/edit_vPlaceNotes"
            app:layout_constraintTop_toBottomOf="@+id/edit_vPlaceNotes" />

        <Button
            android:id="@+id/btn_saveImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Add an Image"
            app:layout_constraintEnd_toEndOf="@+id/edit_vPlaceNotes"
            app:layout_constraintStart_toStartOf="@+id/label_images"
            app:layout_constraintTop_toBottomOf="@+id/imageView_image" />

        <EditText
            android:id="@+id/edit_vPlaceName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="e.g. John's 30th "
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/label_vPlaceName"
            app:layout_constraintTop_toBottomOf="@+id/label_vPlaceName" />

        <EditText
            android:id="@+id/edit_vPlaceCompanions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="e.g. John, Mark, Sophie "
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/label_vPlaceName"
            app:layout_constraintTop_toBottomOf="@+id/label_Companions" />

        <EditText
            android:id="@+id/edit_StartDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="DD/MM/YYYY"
            android:inputType="date"
            app:layout_constraintEnd_toStartOf="@+id/btn_startDate"
            app:layout_constraintStart_toStartOf="@+id/label_vPlaceDate"
            app:layout_constraintTop_toBottomOf="@+id/label_vPlaceDate" />

        <Button
            android:id="@+id/btn_startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="SELECT DATE"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_StartDate" />


        <Button
            android:id="@+id/btn_endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="SELECT DATE"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_EndDate" />

        <EditText
            android:id="@+id/edit_EndDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="DD/MM/YYYY"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="@+id/edit_StartDate"
            app:layout_constraintStart_toStartOf="@+id/label_vPlaceDate"
            app:layout_constraintTop_toBottomOf="@+id/label_startDate2" />

        <EditText
            android:id="@+id/edit_vPlaceNotes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="Any Notes?"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="@+id/edit_vPlaceCompanions"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/label_notes"
            app:layout_constraintTop_toBottomOf="@+id/label_notes" />

        <Button
            android:id="@+id/btn_saveHoliday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="Save Holiday"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_saveImage" />

        <ImageView
            android:id="@+id/imageView_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/edit_vPlaceNotes"
            app:layout_constraintStart_toStartOf="@+id/label_images"
            app:layout_constraintTop_toBottomOf="@+id/label_images"
            app:srcCompat="@color/colorPrimaryDark" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>